--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ function playAudio() {
 		ctx.font = "48px Comic Sans MS";
 		ctx.fillStyle = "Black";
 		ctx.textAlign = "center";
-		ctx.fillText("INformation", infoCanvas.width/2, infoCanvas.height/10);
+		ctx.fillText("Information", infoCanvas.width/2, infoCanvas.height/10);
 		ctx.font = "24px Comic Sans MS";
 		ctx.fillText("Next Block", infoCanvas.width/2, infoCanvas.height/5);
 		
