--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ function playAudio() {
 	ctx.font = "40px Comic Sans MS";
 	ctx.fillStyle = "Black";
 	ctx.textAlign = "center";
-	ctx.fillText("은우야 안녕 잘지내지?", titleCanvas.width/2, titleCanvas.height/1.3);
+	ctx.fillText("Tetris", titleCanvas.width/2, titleCanvas.height/1.3);
 </script>
 
 <script>
